--- a/style.scss
+++ b/style.scss
@@ -864,6 +864,7 @@ footer.footer-web{
             align-items: center;
             border-radius: 0px 0px 5px 5px;
             .text{
+                width: 100%;
                 margin-bottom: 0;
                 font-weight: 800;
                 padding-right: 25px;
